# attributes

./: Cargo.toml  README.md
src/: attrenum.rs  lib.rs
tests/: basic.rs
