[package]
name = "attributes"
version = "0.1.0"
authors = ["bilal <skillzaa.com@gmail.com>"]
edition = "2018"
description = "This is a small library that implements attributes"
repository = "https://github.com/skillzaa/attributes.git"
homepage = "https://github.com/skillzaa/attributes.git"
license = "MIT OR Apache-2.0"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
